# scc

./: 00_main.c  ARM_ASM.asm  CMakeLists.txt  FileCS.sh  MIPSmucky.asm  README.md  RUN_COMMANDS.sh  cASM.asm  cCompiler.out  cMIPSASM.asm  scc.c  scc.c.txt  sccARM_FUNCTIONS.c  sccARM_FUNCTIONS.c.txt  sccARM_REGS.c  sccMIPS_FUNCTIONS.c  sccMIPS_REGS.c
BASIC_interpreter/: README  RUN_COMMANDS.sh  main.bas  tinyBASIC  tinyBASIC.c
IAR_ASM_ARM_CM/: 000_empty.s  00_REG.s  00_emptyTemplate.s  01_B_branch.s  02_BL_branchLink.s  03_immediate.s  04_SWI_debugReturn.s  05_ARM_THUMB_mixed.s  06_CMP_conditional_execution.s  07_gcd()_greatest_common_division.s  08_gcd()_optimized.s  09_LTORG_litPool.s  10_ADR_ADRL_addressGen_addrLoad.s  11_EQU_define.s  12_DCB_strings.s  13_ldrW.s  14_defines.s  15_SECTION.s  16_STM.s  17_r8-r12_highRegisters.s  18_macro.s  19_multiplication.s  20_div.s  21_tmpCompiler.s  PROJECT.dep  PROJECT.ewd  PROJECT.ewp  PROJECT.ewt  asm.s  asmCut.s  asm_generic_CM.icf  workspace.eww
IAR_ASM_ARM_CM/Debug/Exe/: PROJECT.out  PROJECT.sim  PROJECT.txt
IAR_ASM_ARM_CM/Debug/List/: PROJECT.map  asmCut.lst
IAR_ASM_ARM_CM/settings/: PROJECT.Debug.cspy.bat  PROJECT.Debug.cspy.ps1  PROJECT.Debug.driver.xcl  PROJECT.Debug.general.xcl  PROJECT.dbgdt  PROJECT.dnx  workspace.wsdt
VS_project/sccVS/: CMakeLists.txt
VS_project/sccVS/sccVS/: CMakeLists.txt  sccVS.cpp  sccVS.h
